--- a/components/css-modules/image-carousel.module.css
+++ b/components/css-modules/image-carousel.module.css
@@ -15,7 +15,7 @@
 
 .centerImage {
     position: relative;
-    z-index: 9;
+    z-index: 2;
     font-family: urbanistBoldItalic;
 }
 
@@ -24,7 +24,7 @@
     opacity: 0.8;
     height: 100%;
     margin: auto;
-    z-index: 8;
+    z-index: 1;
     position: absolute;
     width: 25%;
     font-family: urbanistBoldItalic;
@@ -96,13 +96,13 @@
 .prevbutton {
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 1;
 }
 
 .nextbutton {
     top: 0;
     right: 0;
-    z-index: 10;
+    z-index: 1;
 }
 
 @media only screen and (max-width: 1600px) {
